--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,7 +76,7 @@ jobs:
           newman run ./build/postman/dokla.postman_collection.json
 
       - name: Setup tmate session
-        if: ${{ failure() }}
+        if: ${{ always() }}
         uses: mxschmitt/action-tmate@v3
 
       - name: Push Docker image To docker hub
